--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
+    "chart.js": "^3.5.1",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
+    "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^3.4.4",
