--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.23.0",
     "chart.js": "^3.5.1",
+    "firebase": "^9.1.3",
     "history": "^5.0.1",
     "react": "^17.0.2",
     "react-alice-carousel": "^2.5.1",
