--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-alice-carousel": "^2.5.1",
     "react-chartjs-2": "^3.2.0",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
